added more info

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
 streamlit
 streamlit_cropper
-numpy
-datasets
-accelerate
-loadimg
-faiss-cpu
 torch
-transformers
-loadimg
-matplotlib
+chromadb
+torch
 torchvision
-sentence_transformers
-pinecone
+clip
+ftfy
+regex
+tqdm
